2006-06-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/common.py:
	  handle the case with twisted 2.0.x where a simple class does not
	  have __implemented__

2006-06-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/audiotest/audiotest.py:
	  That was pretty bad - the source already had a name

2006-06-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  only create default manager/worker if
	  $sysconfig/flumotion/(manager,worker) does not exist

2006-06-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  create default manager config dir in post script

2006-06-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion.spec.in:
	  require pkgconfig since we install a .pc file

2006-06-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/effects/volume/admin_gtk.py:
	  make the effect's ui query the initial volume first
	* flumotion/component/base/admin_gtk.py:
	  effect nodes should forward title
	* flumotion/component/effects/volume/volume.py:
	  add .getVolume(), document
	* flumotion/component/producers/audiotest/Makefile.am:
	* flumotion/component/producers/audiotest/admin_gtk.py:
	* flumotion/component/producers/audiotest/audiotest.py:
	* flumotion/component/producers/audiotest/audiotest.xml:
	  add a UI for the audiotest component, with a volume node
	* flumotion/component/producers/soundcard/soundcard.py:
	  add getVolume()
	* po/POTFILES.in:
	  add new admin_gtk.py

2006-06-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/client.py:
	  If we can't instantiate the admin ui view, show us in the admin
	  UI
	* flumotion/manager/admin.py:
	  perspective_... should return a deferred always
	* flumotion/job/job.py:
	  Since we are a proper spawn and not a fork, we can remove the
	  os._exit() hack and let the reactor do .stop correctly.  Cleans