@@ -1,3 +1,8 @@
+2006-06-18  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion.spec.in:
+	  updates to spec file for new home dir and default worker/manager
+
 2006-06-17  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/common/common.py:
